data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1295.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\93\80\80\80\00\01\03\65\6e\76\0b\65"
    "\78\74\65\72\6e\61\6c\5f\66\6e\00\00\03\82\80\80"
    "\80\00\01\00\0a\8f\80\80\80\00\01\89\80\80\80\00"
    "\00\02\7f\10\00\0c\00\0b\0b"
  )
""
)